[gd_scene load_steps=3 format=3 uid="uid://24i5obym8hrl"]

[ext_resource type="Script" path="res://Scenes/scene_controller.gd" id="1_6nxf8"]
[ext_resource type="Script" path="res://network_manager.gd" id="2_network"]

[node name="SceneController" type="Node"]
script = ExtResource("1_6nxf8")

[node name="SceneContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]

[node name="NetworkManager" type="Node" parent="."]
script = ExtResource("2_network")
